--- a/style.css
+++ b/style.css
@@ -1,4 +1,149 @@
-html {
-  height: 100%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
   width: 100%;
+  height: 100vh;
+  background: rgba(33, 33, 33, 0.98);
+  z-index: 1;
+  position: relative;
+  padding-top: 60px; /* para evitar que o conteúdo fique sob a navbar */
+}
+
+i, span {
+  cursor: pointer;
+  color: white;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 55px;
+  padding: 5px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #212121;
+  z-index: 10;
+}
+
+/* Grupos de elementos */
+.left-section,
+.search,
+.icons {
+  display: flex;
+  align-items: center;
+}
+
+/* Menu e logo */
+.left-section i {
+  font-size: 24px;
+  margin-right: 20px;
+}
+
+.left-section .logo {
+  width: 100px;
+  cursor: pointer;
+}
+
+/* Busca */
+.search {
+  height: 30px;
+  flex: 1;
+  max-width: 600px;
+}
+
+.search input {
+  width: 100%;
+  height: 100%;
+  padding-left: 10px;
+  font-size: 16px;
+  border: 1px solid gray;
+  border-radius: 2px 0 0 2px;
+  outline: none;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+}
+
+.search input:focus {
+  border-color: rgb(32, 32, 223);
+}
+
+.searchbtn {
+  width: 50px;
+  height: 100%;
+  background: gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0 2px 2px 0;
+}
+
+.searchbtn i {
+  font-size: 22px;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.search .material-icons:last-child {
+  margin-left: 10px;
+}
+
+/* Ícones da direita */
+.icons i {
+  margin-right: 25px;
+  font-size: 25px;
+}
+
+.notification {
+  position: relative;
+  cursor: pointer;
+}
+
+.notification-count[data-count]::after {
+  content: attr(data-count);
+  position: absolute;
+  right: -5px;
+  top: -5px;
+  width: 18px;
+  height: 18px;
+  background: #d11811;
+  color: white;
+  font-size: 12px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Imagem de perfil */
+.profile-icon {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.sidebar{
+    position: fixed;
+    left: 0px;
+    top: 60px;
+    width: 240px;
+    height: auto;
+    padding-right: 10px;
+    color: rgba(255, 255, 255,0.8);
+}
+
+.sidebar .links{
+    padding-bottom: 15px;
+    border-bottom: 1px solid gray;
+}
+
+.sidebar .links-2{
+    padding-top: 15px;
 }
